l'ajoute des formulaires

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -20,6 +20,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*", "vite.config.ts"],
+  "include": ["src/**/*", "vite.config.ts", "App.tsx"],
   "exclude": ["node_modules", "dist"]
 }
