--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@stomp/stompjs": "^7.1.1",
     "@tanstack/react-query": "^5.56.2",
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
@@ -48,6 +49,7 @@
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^12.4.13",
     "input-otp": "^1.2.4",
+    "lovable-tagger": "^1.1.8",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -58,6 +60,7 @@
     "react-router-dom": "^6.26.2",
     "react-select": "^5.10.1",
     "recharts": "^2.12.7",
+    "sockjs-client": "^1.5.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
