--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "react-router-dom": "^6.26.2",
     "react-select": "^5.10.1",
     "recharts": "^2.12.7",
-    "sockjs-client": "^1.5.1",
+    "sockjs-client": "^1.6.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
@@ -74,6 +74,7 @@
     "@types/node": "^22.13.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/sockjs-client": "^1.5.4",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
