--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@types/node": "^22.13.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-select": "^5.0.0",
     "@types/sockjs-client": "^1.5.4",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
