--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "framer-motion": "^12.4.13",
     "html-to-image": "^1.11.13",
     "input-otp": "^1.2.4",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lovable-tagger": "^1.1.8",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
